--- a/client/modules/song/new-song.html
+++ b/client/modules/song/new-song.html
@@ -1,3 +1,3 @@
-<strong>SoundCloud URL</strong>
-<input ng-model="url" />
-<button ng-click="add()">Add</button>
+<h4>Enter a URL for a SoundCloud track:</h4>
+<input class="add-input" ng-model="url" />
+<a class="add-btn" ng-click="add()">+</a>
